Fix PDF formatting for NVIDIA-SMI snapshot

--- a/System_Architecture_and_Performance_Report.tex
+++ b/System_Architecture_and_Performance_Report.tex
@@ -563,7 +563,7 @@ GlobalTaskScheduler 是系统的任务管理核心，负责调度和执行所有
 
 \subsection{资源占用快照 (NVIDIA-SMI)}
 实验期间的 GPU 显存占用快照（RTX 5070 Laptop, 8GB）：
-\begin{lstlisting}[caption=NVIDIA-SMI Snapshot (2025-12-08)]
+\begin{lstlisting}[caption=NVIDIA-SMI Snapshot (2025-12-08), basicstyle=\tiny\ttfamily]
 Mon Dec  8 11:58:29 2025       
 +-----------------------------------------------------------------------------------------+
 | NVIDIA-SMI 581.57                 Driver Version: 581.57         CUDA Version: 13.0     |
