Optimize NVIDIA-SMI snapshot formatting

--- a/System_Architecture_and_Performance_Report.tex
+++ b/System_Architecture_and_Performance_Report.tex
@@ -563,19 +563,19 @@ GlobalTaskScheduler 是系统的任务管理核心，负责调度和执行所有
 
 \subsection{资源占用快照 (NVIDIA-SMI)}
 实验期间的 GPU 显存占用快照（RTX 5070 Laptop, 8GB）：
-\begin{lstlisting}[caption=NVIDIA-SMI Snapshot (2025-12-08), basicstyle=\tiny\ttfamily]
+\begin{lstlisting}[caption=NVIDIA-SMI Snapshot (2025-12-08), basicstyle=\scriptsize\ttfamily, breaklines=false]
 Mon Dec  8 11:58:29 2025       
-+-----------------------------------------------------------------------------------------+
-| NVIDIA-SMI 581.57                 Driver Version: 581.57         CUDA Version: 13.0     |
-+-----------------------------------------+------------------------+----------------------+
-| GPU  Name                  Driver-Model | Bus-Id          Disp.A | Volatile Uncorr. ECC |
-| Fan  Temp   Perf          Pwr:Usage/Cap |           Memory-Usage | GPU-Util  Compute M. |
-|                                         |                        |               MIG M. |
-|=========================================+========================+======================|
-|   0  NVIDIA GeForce RTX 5070 ...  WDDM  |   00000000:01:00.0 Off |                  N/A |
-| N/A   43C    P4              9W /   60W |    5606MiB /   8151MiB |      2%      Default |
-|                                         |                        |                  N/A |
-+-----------------------------------------+------------------------+----------------------+
++-----------------------------------------------------------------------------+
+| NVIDIA-SMI 581.57       Driver Version: 581.57       CUDA Version: 13.0     |
++-----------------------------------------+----------------------+------------+
+| GPU  Name                  Driver-Model | Bus-Id        Disp.A | Volatile ECC |
+| Fan  Temp   Perf          Pwr:Usage/Cap |         Memory-Usage | GPU-Util     |
+|                                         |                      | Compute M.   |
+|=========================================+======================+============|
+|   0  NVIDIA GeForce RTX 5070 ...  WDDM  | 00000000:01:00.0 Off |        N/A |
+| N/A   43C    P4              9W /   60W |  5606MiB /   8151MiB |    2% Default|
+|                                         |                      |        N/A   |
++-----------------------------------------+----------------------+------------+
 \end{lstlisting}
 
 \subsection{内存泄漏检测}
